smoothgauss implemented, fix ranges of the z axis

--- a/contrast_map.ipynb
+++ b/contrast_map.ipynb
@@ -14,6 +14,11 @@
     "import matplotlib.pyplot as plt\n",
     "import max_functions as mf\n",
     "%matplotlib inline\n",
+    "\n",
+    "#to smooth the MFPADs\n",
+    "import scipy as sp\n",
+    "import scipy.ndimage\n",
+    "\n",
     "import mplhep as hep\n",
     "plt.style.use(hep.style.ROOT) # For now ROOT defaults to CMS\n",
     "import seaborn as sns\n",
@@ -47,10 +52,21 @@
    "outputs": [],
    "source": [
     "#high binning\n",
-    "fileRCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
-    "fileSCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
-    "fileRCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
-    "fileSCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")"
+    "fileRCR = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\R-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
+    "fileSCR = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\S-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
+    "fileRCL = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\R-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
+    "fileSCL = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\S-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#low fixed binning\n",
+    "fileRCR = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\R-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
+    "fileSCR = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\S-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
+    "fileRCL = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\R-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
+    "fileSCL = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\S-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0.root\")"
    ]
   },
   {
@@ -59,11 +75,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#low fixed binning\n",
-    "fileRCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
-    "fileSCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
-    "fileRCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
-    "fileSCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0.root\")"
+    "def smoothgauss(MFPAD, sigmax, sigmay):\n",
+    "    \"\"\"\n",
+    "    Fucntion the smooths with a 2D gaussian function 2D matrixes. For the experiments\n",
+    "    x = cos(theta), y = phi. Phi is twice ctheta and sigma should be the same.\n",
+    "    \"\"\"\n",
+    "    # NOTE: the right order is y,x (from stackoverflow)\n",
+    "    sigma = [sigmay,sigmax] \n",
+    "    Y = sp.ndimage.filters.gaussian_filter(MFPAD, sigma, mode=\"constant\")\n",
+    "    return Y"
    ]
   },
   {
@@ -111,7 +131,14 @@
     "totR = np.add(r_norm_nhistRCL,r_norm_nhistRCR)\n",
     "totS = np.add(r_norm_nhistSCL,r_norm_nhistSCR)\n",
     "\n",
-    "PECD =  np.divide(np.subtract(totR,totS),np.add(totR,totS))"
+    "totR_sm = smoothgauss(totR,0.3,0.6)\n",
+    "totS_sm = smoothgauss(totS,0.3,0.6)\n",
+    "\n",
+    "PECD =  np.divide(np.subtract(totR,totS),np.add(totR,totS))\n",
+    "PECD_smooth = np.divide(np.subtract(totR_sm,totS_sm),np.add(totR_sm,totS_sm))\n",
+    "\n",
+    "cosM = (costheta_nhistSCL[1:] + costheta_nhistSCL[:-1])/2\n",
+    "phiM = (phi_nhistSCL[1:] + phi_nhistSCL[:-1])/2"
    ]
   },
   {
@@ -155,14 +182,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cs = plt.contourf(PECD.T, 10, extent= [costheta_nhistSCL[0],costheta_nhistSCL[-1],phi_nhistSCL[0],phi_nhistSCL[-1]], aspect=\"auto\", cmap='seismic') # first option with increasing number of levels = 10\n",
+    "clev = np.arange(PECD.min(),PECD.max(),.01)\n",
+    "clev_mod = np.arange(-0.15,0.15,.01)\n",
+    "\n",
+    "cs = plt.contourf(phiM, cosM, PECD.T, 10, extent=\"both\", aspect=\"auto\", cmap='seismic') # first option with increasing number of levels = 10\n",
     "cbar = plt.colorbar(cs)\n",
-    "plt.title(\"Contrast map with the right axis, 10 levels\")\n",
+    "plt.title(\"Contrast map 10 levels\")\n",
     "plt.show()\n",
     "\n",
-    "cs1 = plt.contourf(PECD.T, 8, extent= [costheta_nhistSCL[0],costheta_nhistSCL[-1],phi_nhistSCL[0],phi_nhistSCL[-1]], aspect=\"equal\",cmap='seismic') # first option with increasing number of levels\n",
+    "#better appearance, but probaly not accurate because runs till the end of the scale\n",
+    "# extent= [phi_nhistSCL[0],phi_nhistSCL[-1],costheta_nhistSCL[0],costheta_nhistSCL[-1]]\n",
+    "\n",
+    "cs1 = plt.contourf(PECD.T, clev, extent= [phi_nhistSCL[0],phi_nhistSCL[-1],costheta_nhistSCL[0],costheta_nhistSCL[-1]], aspect=\"equal\",cmap='seismic') # first option with increasing number of levels\n",
     "cbar = plt.colorbar(cs1)\n",
-    "plt.title(\"Contrast map with the right axis, 8 levels\")\n",
+    "plt.title(\"Contrast map thin levels\")\n",
+    "plt.show()\n",
+    "\n",
+    "cs2 = plt.contourf(PECD_smooth.T, clev, extent= [phi_nhistSCL[0],phi_nhistSCL[-1],costheta_nhistSCL[0],costheta_nhistSCL[-1]], aspect=\"equal\",cmap='seismic') # first option with increasing number of levels\n",
+    "cbar = plt.colorbar(cs2)\n",
+    "plt.title(\"Contrast map thin levels smoothed\")\n",
     "plt.show()"
    ]
   },
@@ -172,11 +210,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(PECD.T, extent= [costheta_nhistSCL[0],costheta_nhistSCL[-1],phi_nhistSCL[0],phi_nhistSCL[-1]], interpolation='quadric', cmap='seismic', aspect=\"auto\")\n",
-    "# interpolation: [bicubic, quadric, spline16]\n",
-    "plt.title(\"Contrast map with the right axis, quadratic interpolation\")\n",
+    "# interpolation: [ 'none', 'nearest', 'bilinear', 'bicubic', 'spline16', 'spline36', 'hanning', 'hamming', 'hermite', 'kaiser', 'quadric', 'catrom', 'gaussian', 'bessel', 'mitchell', 'sinc', 'lanczos'.]\n",
+    "\n",
+    "fig=plt.figure()\n",
+    "plt.imshow(PECD.T, vmin=-0.15, vmax=0.15, extent= [phi_nhistSCL[0],phi_nhistSCL[-1],costheta_nhistSCL[0],costheta_nhistSCL[-1]], interpolation='quadric', cmap='seismic', aspect=\"auto\")\n",
+    "plt.title(\"Contrast map quadratic interpolation\")\n",
     "plt.colorbar()\n",
-    "# plt.axis(aspect='image');"
+    "# plt.axis(aspect='image');\n",
+    "\n",
+    "fig1=plt.figure()\n",
+    "plt.imshow(PECD_smooth.T, vmin=-0.10, vmax=0.10, extent= [phi_nhistSCL[0],phi_nhistSCL[-1],costheta_nhistSCL[0],costheta_nhistSCL[-1]], interpolation='quadric', cmap='seismic', aspect=\"auto\")\n",
+    "# interpolation: [bicubic, quadric, spline16]\n",
+    "plt.title(\"Contrast map smoothed quadratic interpolation\")\n",
+    "\n",
+    "#modifies just the colobar\n",
+    "# plt.colorbar(boundaries=np.linspace(-.05, .05, 5, endpoint=True))\n",
+    "# plt.axis(aspect='image');\n",
+    "plt.colorbar()"
    ]
   },
   {
@@ -226,11 +276,8 @@
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
     "\n",
-    "ctheta_cred = (costheta_nhistSCL[1:] + costheta_nhistSCL[:-1])/2\n",
-    "phi_cred = (phi_nhistSCL[1:] + phi_nhistSCL[:-1])/2\n",
-    "\n",
-    "fig = go.Figure(data=go.Contour(x=phi_cred, y=ctheta_cred, z=PECD.T, line_smoothing=0.85, colorscale=Seismic_r,\n",
-    "contours=dict(start=-0.10, end=0.10, size=0.025) \n",
+    "fig = go.Figure(data=go.Contour(x=phiM, y=cosM, z=PECD_smooth.T, line_smoothing=0.85, colorscale=Seismic_r,\n",
+    "contours=dict(start=-0.12, end=0.12, size=0.015) \n",
     "))\n",
     "\n",
     "fig.update_layout(\n",
@@ -255,13 +302,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('base': conda)",
+   "display_name": "Python 3.8.6 64-bit ('anaconda3': conda)",
    "metadata": {
     "interpreter": {
      "hash": "14199186261275788dfea1c403a51d6f79ce13d90df2e64b59dbb79af406f697"
     }
    },
-   "name": "Python 3.8.5 64-bit ('base': conda)"
+   "name": "Python 3.8.6 64-bit ('anaconda3': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -273,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.6-final"
   }
  },
  "nbformat": 4,
