theoretical contrast map and MFPAD sum for R and S

--- a/72_2D_MFPADs_theory.ipynb
+++ b/72_2D_MFPADs_theory.ipynb
@@ -369,22 +369,23 @@
     "#standard sortin according to cos\n",
     "from numpy.core.defchararray import multiply\n",
     "\n",
-    "counts_matrixS_cos=[]\n",
-    "counts_matrixR_cos=[]\n",
+    "MFPAD_S_cos=[]\n",
+    "MFPAD_R_cos=[]\n",
+    "\n",
     "cos_projthS_cos=[]\n",
     "cos_projthR_cos=[]\n",
     "phi_projthS_cos=[]\n",
     "phi_projthR_cos=[]\n",
     "\n",
     "for filename,group,i in zip(frame_srt,frame_srt,range(72)):\n",
-    "    counts_matrixS_cos.append(group[1][\"value\"].to_numpy().reshape(200,100))\n",
-    "    cos_projthS_cos.append(counts_matrixS_cos[i].sum(axis=0))\n",
-    "    phi_projthS_cos.append(counts_matrixS_cos[i].sum(axis=1))\n",
-    "    tempcos=np.flip(counts_matrixS_cos[i], axis=0)\n",
+    "    MFPAD_S_cos.append(group[1][\"value\"].to_numpy().reshape(200,100))\n",
+    "    cos_projthS_cos.append(MFPAD_S_cos[i].sum(axis=0))\n",
+    "    phi_projthS_cos.append(MFPAD_S_cos[i].sum(axis=1))\n",
+    "    tempcos=np.flip(MFPAD_S_cos[i], axis=0)\n",
     "    tempphi=np.flip(tempcos, axis=1)\n",
-    "    counts_matrixR_cos.append(tempphi)\n",
-    "    cos_projthR_cos.append(counts_matrixR_cos[i].sum(axis=0))\n",
-    "    phi_projthR_cos.append(counts_matrixR_cos[i].sum(axis=1))\n",
+    "    MFPAD_R_cos.append(tempphi)\n",
+    "    cos_projthR_cos.append(MFPAD_R_cos[i].sum(axis=0))\n",
+    "    phi_projthR_cos.append(MFPAD_R_cos[i].sum(axis=1))\n",
     "\n",
     "cos_projthS_cos=np.array(cos_projthS_cos)\n",
     "cos_projthR_cos=np.array(cos_projthR_cos)\n",
@@ -393,6 +394,29 @@
     "\n",
     "print(np.array(cos_projthS_cos).shape)\n",
     "print(np.array(cos_projthR_cos).shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MFPAD_S_cos_norm=[]\n",
+    "MFPAD_R_cos_norm=[]\n",
+    "mPECD_cos=[]\n",
+    "\n",
+    "for cols,colr in zip(MFPAD_S_cos,MFPAD_R_cos):\n",
+    "    MFPAD_S_cos_norm.append(cols/cols.sum(axis=1)[:,np.newaxis])\n",
+    "    MFPAD_R_cos_norm.append(colr/colr.sum(axis=1)[:,np.newaxis])\n",
+    "\n",
+    "MFPAD_S_cos_norm=np.array(MFPAD_S_cos_norm)\n",
+    "MFPAD_R_cos_norm=np.array(MFPAD_R_cos_norm)\n",
+    "MFPAD_S_cos_norm_sum=np.sum(MFPAD_S_cos_norm,axis=0)\n",
+    "MFPAD_R_cos_norm_sum=np.sum(MFPAD_R_cos_norm,axis=0)\n",
+    "\n",
+    "mPECD_cos=np.divide(np.subtract(MFPAD_R_cos_norm,MFPAD_S_cos_norm),np.add(MFPAD_R_cos_norm,MFPAD_S_cos_norm))\n",
+    "mPECD_cos_sum=np.divide(np.subtract(MFPAD_R_cos_norm_sum,MFPAD_S_cos_norm_sum),np.add(MFPAD_R_cos_norm_sum,MFPAD_S_cos_norm_sum))"
    ]
   },
   {
@@ -756,18 +780,62 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#INTEGRATED S AND R MFPADs\n",
+    "fig, (ax0, ax1) = plt.subplots(1,2,sharex=True,figsize=(12, 6))\n",
+    "\n",
+    "ax0.imshow(MFPAD_R_cos_norm_sum, extent=[go_phi[0],go_phi[-1],go_cos[0],go_cos[-1]], interpolation='quadric', cmap='seismic', aspect=\"auto\")\n",
+    "ax0.set_title(\"MFPAD R enant\")\n",
+    "\n",
+    "ax1.imshow(MFPAD_S_cos_norm_sum, extent=[go_phi[0],go_phi[-1],go_cos[0],go_cos[-1]], interpolation='quadric', cmap='seismic', aspect=\"auto\")\n",
+    "ax1.set_title(\"MFPAD S enant\")\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#extent= [go_phi[0],go_phi[-1],go_cos[0],go_cos[-1]]\n",
+    "\n",
+    "# interpolation: [ 'none', 'nearest', 'bilinear', 'bicubic', 'spline16', 'spline36', 'hanning', 'hamming', 'hermite', 'kaiser', 'quadric', 'catrom', 'gaussian', 'bessel', 'mitchell', 'sinc', 'lanczos'.]\n",
+    "\n",
+    "fig=plt.figure()\n",
+    "plt.imshow(mPECD_cos_sum, vmin=-0.3, vmax=0.3, extent=[go_phi[0],go_phi[-1],go_cos[0],go_cos[-1]], interpolation='none', cmap='seismic', aspect=\"auto\")\n",
+    "plt.title(\"Contrast map theory\")\n",
+    "plt.colorbar()\n",
+    "\n",
+    "fig1=plt.figure()\n",
+    "plt.imshow(mPECD_cos_sum, vmin=-0.3, vmax=0.3, extent=[go_phi[0],go_phi[-1],go_cos[0],go_cos[-1]], interpolation='bilinear', cmap='seismic', aspect=\"auto\")\n",
+    "plt.title(\"Contrast map theory bilinear\")\n",
+    "plt.colorbar()\n",
+    "\n",
+    "fig2=plt.figure()\n",
+    "plt.imshow(mPECD_cos_sum, vmin=-0.3, vmax=0.3, extent=[go_phi[0],go_phi[-1],go_cos[0],go_cos[-1]], interpolation='quadric', cmap='seismic', aspect=\"auto\")\n",
+    "plt.title(\"Contrast map theory quadratic interpolation\")\n",
+    "plt.colorbar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.6 64-bit ('base': conda)",
+   "display_name": "Python 3.8.6 64-bit ('anaconda3': conda)",
    "metadata": {
     "interpreter": {
      "hash": "14199186261275788dfea1c403a51d6f79ce13d90df2e64b59dbb79af406f697"
     }
    },
-   "name": "Python 3.8.6 64-bit ('base': conda)"
+   "name": "Python 3.8.6 64-bit ('anaconda3': conda)"
   },
   "language_info": {
    "codemirror_mode": {
