--- a/b1_map_CH9.ipynb
+++ b/b1_map_CH9.ipynb
@@ -27,6 +27,10 @@
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from mpl_toolkits.mplot3d.art3d import Poly3DCollection\n",
     "\n",
+    "import plotly.graph_objects as go\n",
+    "from plotly.subplots import make_subplots\n",
+    "import itertools\n",
+    "\n",
     "from __future__ import division\n",
     "\n",
     "plt.style.use(hep.style.ROOT) # For now ROOT defaults to CMS\n",
@@ -37,22 +41,22 @@
     "loc = \"angular_distr_el/CH9/ID_ALL_mol_e0_valid/EN_gate/MFPADs_multinew_std\"\n",
     "\n",
     "# #low old binning (wrong?)\n",
-    "# fileRCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\R-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "# fileRCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\R-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "# fileSCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\S-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "# fileSCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\S-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "# fileRCR = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\R-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "# fileRCL = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\R-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "# fileSCR = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\S-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "# fileSCL = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\S-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
     "\n",
     "#low new binning\n",
-    "fileRCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "fileRCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "fileSCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "fileSCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "fileRCR = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\R-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "fileRCL = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\R-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "fileSCR = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\S-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "fileSCL = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\S-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
     "\n",
     "# #high neew binning\n",
-    "# fileRCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
-    "# fileSCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
-    "# fileRCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
-    "# fileSCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
+    "# fileRCR = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\R-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
+    "# fileSCR = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\S-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
+    "# fileRCL = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\R-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
+    "# fileSCL = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\S-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
     "\n",
     "k=fileRCR[loc].keys()\n",
     "d=dict(fileRCR[loc].classes()) # shows the type of each item\n",
@@ -208,6 +212,7 @@
    "source": [
     "import matplotlib as mpl\n",
     "from matplotlib import cm\n",
+    "import matplotlib.colors\n",
     "\n",
     "#the following converts a cmap into plotly language \n",
     "magma_cmap = mpl.cm.get_cmap('magma')\n",
@@ -236,7 +241,16 @@
     "    return pl_colorscale\n",
     "\n",
     "Magma_r = matplotlib_to_plotly(magma_cmap, 255)\n",
-    "Seismic_r = matplotlib_to_plotly(seismic_cmap, 255)"
+    "Seismic_r = matplotlib_to_plotly(seismic_cmap, 255)\n",
+    "\n",
+    "#temperature cmap\n",
+    "colors = [[0, \"blue\"],\n",
+    "          [0.5, \"white\"],\n",
+    "          [0.75, \"yellow\"],\n",
+    "          [1, \"red\"]]\n",
+    "\n",
+    "cmap_temp = matplotlib.colors.LinearSegmentedColormap.from_list(\"temperature_philipp\", colors)\n",
+    "cmap_temp_go = go.color_continuous_scale=[(0, \"blue\"), (0.5, \"white\"), (0.75, \"yellow\"), (1,\"red\")]"
    ]
   },
   {
@@ -326,8 +340,6 @@
     "MFPAD_xy[0][0] #to be reduced like ctheta_c_red\n",
     "\n",
     "phiM=(MFPAD_xy[0][0][1:] + MFPAD_xy[0][0][:-1])/2\n",
-    "cosM=(MFPAD_xy[0][1][1:] + MFPAD_xy[0][1][:-1])/2\n",
-    "\n",
     "cosM=(MFPAD_xy[0][1][1:] + MFPAD_xy[0][1][:-1])/2"
    ]
   },
@@ -577,12 +589,12 @@
     "# param_matrix=np.zeros((6,72)) #nparray initialization\n",
     "param_matrix_phi = [[0 for i in range(72)] for j in range(6)] #i col, j row\n",
     "\n",
-    "fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex=True , sharey=True)\n",
+    "fig, axes = plt.subplots(6,12, figsize=(50, 24), constrained_layout=True, sharex=True , sharey=True)\n",
     "fig.subplots_adjust(hspace = .5, wspace=.5)\n",
     "custom_xlim = (-1, 1)\n",
     "custom_ylim = (-0.2,0.2)\n",
     "\n",
-    "for i in range(72): #fixe because of the photon directions, equal to range(len(cosphi))\n",
+    "for i,ax in zip(range(72),axes.flatten()): #fixe because of the photon directions, equal to range(len(cosphi))\n",
     "    #print(i)\n",
     "    x_data = ctheta_cred\n",
     "    y_data = cPECD_norm_phi[i]\n",
@@ -599,12 +611,11 @@
     "    #NOTE: x_data has to be monotonicalli INCREASING!\n",
     "    bspl = make_interp_spline(x_data, PECD6(x_data, *m.values.values()), k=5)\n",
     "    \n",
-    "    ax = fig.add_subplot(6, 12, i+1)\n",
     "    ax.plot(x_data_new, bspl(x_data_new))\n",
-    "    # ax.scatter(x_data,y_data,color='r') #REDUNDANT with errorbars\n",
+    "    # ax[i].scatter(x_data,y_data,color='r') #REDUNDANT with errorbars\n",
+    "    ax.errorbar(x_data,y_data, yerr=y_err, fmt=\"o\")\n",
     "    ax.set_xlim(custom_xlim)\n",
     "    ax.set_ylim(custom_ylim)\n",
-    "    ax.errorbar(x_data,y_data, yerr=y_err, fmt=\"o\")\n",
     "    # ax.axis('off')\n",
     "    for j,p in zip(range(len(m.parameters)),m.parameters): # len = 6\n",
     "        param_matrix_phi[j][i] = ((m.values[p], m.errors[p]))\n",
@@ -662,7 +673,7 @@
     "fig,axes = plt.subplots(1,6, figsize=(50, 7.5))\n",
     "for i in range(6):\n",
     "    # ax[0,1] = fig.add_subplot(1, 2, 1)\n",
-    "    axes[i].contourf(shift_func(cosphi[:,1].reshape(12,6)) , shift_func(cosphi[:,0].reshape(12,6)) , param_matrix_phi[i,:,0].reshape(12,6) , np.arange(-1., 1., .005) , extend='both', cmap='seismic')\n",
+    "    axes[i].contourf(shift_func(cosphi[:,1].reshape(12,6)) , shift_func(cosphi[:,0].reshape(12,6)) , param_matrix_phi[i,:,0].reshape(12,6) , np.arange(-1., 1., .005) , extend='both', cmap=cmap_temp)\n",
     "    # axes[i].contourf(shift_func(cosphi[:,0].reshape(12,6)),shift_func(cosphi[:,1].reshape(12,6)),param_matrix_phi[i,:,0].reshape(6,12).T)\n",
     "plt.show()"
    ]
@@ -695,8 +706,8 @@
     "fig = make_subplots(rows=1, cols=2,\n",
     "                    subplot_titles=('Without Smoothing', 'With Smoothing'))\n",
     "\n",
-    "fig.add_trace(go.Contour(z=param_matrix_phi[0,:,0], x=go_phi, y=go_cos, line_smoothing=0, colorscale=Seismic_r, contours=dict(start=-0.2, end=0.2, size=0.04)), 1, 1)\n",
-    "fig.add_trace(go.Contour(z=param_matrix_phi[0,:,0], x=go_phi, y=go_cos, line_smoothing=0.75, colorscale=Seismic_r,contours=dict(start=-0.2, end=0.2, size=0.04)), 1, 2)\n",
+    "fig.add_trace(go.Contour(z=param_matrix_phi[0,:,0], x=go_phi, y=go_cos, line_smoothing=0, colorscale=cmap_temp_go, contours=dict(start=-0.2, end=0.2, size=0.04)), 1, 1)\n",
+    "fig.add_trace(go.Contour(z=param_matrix_phi[0,:,0], x=go_phi, y=go_cos, line_smoothing=0.75, colorscale=cmap_temp_go,contours=dict(start=-0.2, end=0.2, size=0.04)), 1, 2)\n",
     "\n",
     "fig.update_layout(\n",
     "    # coloraxis=dict(colorscale=Seismic_r),\n",
@@ -728,11 +739,11 @@
     "\n",
     "for i in range(len(param_matrix_phi)):\n",
     "    if i==1 or i==5:\n",
-    "        fig.add_trace(go.Contour(z=param_matrix_phi[i,:,0], x=go_phi, y=go_cos, line_smoothing=0, colorscale=Seismic_r, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.5)), i+1, 1)\n",
-    "        fig.add_trace(go.Contour(z=param_matrix_phi[i,:,0], x=go_phi, y=go_cos, line_smoothing=0.85, colorscale=Seismic_r, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.5)), i+1, 2)\n",
+    "        fig.add_trace(go.Contour(z=param_matrix_phi[i,:,0], x=go_phi, y=go_cos, line_smoothing=0, colorscale=cmap_temp_go, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.5)), i+1, 1)\n",
+    "        fig.add_trace(go.Contour(z=param_matrix_phi[i,:,0], x=go_phi, y=go_cos, line_smoothing=0.85, colorscale=cmap_temp_go, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.5)), i+1, 2)\n",
     "    else:\n",
-    "        fig.add_trace(go.Contour(z=param_matrix_phi[i,:,0], x=go_phi, y=go_cos, line_smoothing=0, colorscale=Seismic_r, legendgroup=\"yes\", contours=dict(start=-0.2, end=0.2, size=0.04)), i+1, 1)\n",
-    "        fig.add_trace(go.Contour(z=param_matrix_phi[i,:,0], x=go_phi, y=go_cos, line_smoothing=0.85, colorscale=Seismic_r, legendgroup=\"yes\", contours=dict(start=-0.2, end=0.2, size=0.04)), i+1, 2)\n",
+    "        fig.add_trace(go.Contour(z=param_matrix_phi[i,:,0], x=go_phi, y=go_cos, line_smoothing=0, colorscale=cmap_temp_go, legendgroup=\"yes\", contours=dict(start=-0.2, end=0.2, size=0.04)), i+1, 1)\n",
+    "        fig.add_trace(go.Contour(z=param_matrix_phi[i,:,0], x=go_phi, y=go_cos, line_smoothing=0.85, colorscale=cmap_temp_go, legendgroup=\"yes\", contours=dict(start=-0.2, end=0.2, size=0.04)), i+1, 2)\n",
     "\n",
     "fig.update_layout(\n",
     "    # coloraxis=dict(colorscale=Seismic_r),\n",
@@ -760,7 +771,7 @@
     "custom_xlim = (-1, 1)\n",
     "custom_ylim = (-0.2,0.2)\n",
     "\n",
-    "for i in range(72): #fixe because of the photon directions, equal to range(len(cosphi))\n",
+    "for i,ax in zip(range(72),axes.flatten()): #fixe because of the photon directions, equal to range(len(cosphi))\n",
     "    x_data = ctheta_cred\n",
     "    y_data = cPECD_norm_cos[i]\n",
     "    y_err = errPECD_cos[i]\n",
@@ -774,7 +785,6 @@
     "    #NOTE: x_data has to be monotonicalli INCREASING!\n",
     "    bspl = make_interp_spline(x_data, PECD6(x_data, *m.values.values()), k=5)\n",
     "    \n",
-    "    ax = fig.add_subplot(6, 12, i+1)\n",
     "    ax.plot(x_data_new, bspl(x_data_new))\n",
     "    # ax.scatter(x_data,y_data,color='r') #REDUNDANT with errorbars\n",
     "    ax.set_xlim(custom_xlim)\n",
@@ -814,11 +824,11 @@
     "\n",
     "for i in range(len(param_matrix_cos)):\n",
     "    if i==1 or i==5:\n",
-    "        fig.add_trace(go.Contour(z=param_matrix_cos[i,:,0], x=go_phi, y=go_cos, line_smoothing=0, colorscale=Seismic_r, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.5)), i+1, 1)\n",
-    "        fig.add_trace(go.Contour(z=param_matrix_cos[i,:,0], x=go_phi, y=go_cos, line_smoothing=0.85, colorscale=Seismic_r, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.5)), i+1, 2)\n",
+    "        fig.add_trace(go.Contour(z=param_matrix_cos[i,:,0], x=go_phi, y=go_cos, line_smoothing=0, colorscale=cmap_temp_go, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.5)), i+1, 1)\n",
+    "        fig.add_trace(go.Contour(z=param_matrix_cos[i,:,0], x=go_phi, y=go_cos, line_smoothing=0.85, colorscale=cmap_temp_go, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.5)), i+1, 2)\n",
     "    else:\n",
-    "        fig.add_trace(go.Contour(z=param_matrix_cos[i,:,0], x=go_phi, y=go_cos, line_smoothing=0, colorscale=Seismic_r, legendgroup=\"yes\", contours=dict(start=-0.2, end=0.2, size=0.04)), i+1, 1)\n",
-    "        fig.add_trace(go.Contour(z=param_matrix_cos[i,:,0], x=go_phi, y=go_cos, line_smoothing=0.85, colorscale=Seismic_r, legendgroup=\"yes\", contours=dict(start=-0.2, end=0.2, size=0.04)), i+1, 2)\n",
+    "        fig.add_trace(go.Contour(z=param_matrix_cos[i,:,0], x=go_phi, y=go_cos, line_smoothing=0, colorscale=cmap_temp_go, legendgroup=\"yes\", contours=dict(start=-0.2, end=0.2, size=0.04)), i+1, 1)\n",
+    "        fig.add_trace(go.Contour(z=param_matrix_cos[i,:,0], x=go_phi, y=go_cos, line_smoothing=0.85, colorscale=cmap_temp_go, legendgroup=\"yes\", contours=dict(start=-0.2, end=0.2, size=0.04)), i+1, 2)\n",
     "\n",
     "fig.update_layout(\n",
     "    # coloraxis=dict(colorscale=Seismic_r),\n",
@@ -835,13 +845,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.6 64-bit",
+   "display_name": "Python 3.8.6 64-bit (conda)",
    "metadata": {
     "interpreter": {
      "hash": "14199186261275788dfea1c403a51d6f79ce13d90df2e64b59dbb79af406f697"
     }
    },
-   "name": "Python 3.8.6 64-bit"
+   "name": "Python 3.8.6 64-bit (conda)"
   },
   "language_info": {
    "codemirror_mode": {
