sum of the total MFPAD for the two enantiomers right colorscale

--- a/72_2D_MFPADs_CH9_experiment.ipynb
+++ b/72_2D_MFPADs_CH9_experiment.ipynb
@@ -15,6 +15,9 @@
     "import uproot_methods\n",
     "\n",
     "import matplotlib as mpl\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "from mpl_toolkits.mplot3d.art3d import Poly3DCollection\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.colors import LightSource\n",
     "%matplotlib inline\n",
@@ -26,35 +29,40 @@
     "import re\n",
     "\n",
     "import mplhep as hep\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
-    "from mpl_toolkits.mplot3d.art3d import Poly3DCollection\n",
+    "plt.style.use(hep.style.ROOT) # For now ROOT defaults to CMS\n",
+    "\n",
+    "import plotly\n",
+    "import plotly.graph_objects as go\n",
+    "from plotly.subplots import make_subplots\n",
     "\n",
     "from __future__ import division\n",
-    "\n",
-    "plt.style.use(hep.style.ROOT) # For now ROOT defaults to CMS\n",
     "\n",
     "#to see which classes have been defined so far\n",
     "[modname for importer, modname, ispkg in pkgutil.walk_packages(uproot_methods.classes.__path__)]\n",
     "\n",
-    "loc = \"angular_distr_el/CH9/ID_ALL_mol_e0_valid/EN_gate/MFPADs_multinew_std\"\n",
+    "path = \"angular_distr_el/CH9/ID_ALL_mol_e0_valid/EN_gate/\"\n",
+    "dirs = [\"MFPADs_multinew_std\",\"MFPADs_multinew_std\",\"MFPADs_multinew\",\"MFPADs_multinew_flipped\",\"MFPADs_CH_VECTOR\",\"MFPADs_CH_VECTOR_flipped\"]\n",
+    "MFPAD_dirs = [\"MFPADs_e_multinew_check\",\"MFPAD_e_MF_check\",\"MFPAD_e_MF_mix\",]\n",
+    "\n",
+    "loc=path+dirs[0]\n",
     "\n",
     "# #low old binning (wrong?)\n",
-    "# fileRCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\R-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "# fileRCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\R-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "# fileSCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\S-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "# fileSCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\S-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "# fileRCR = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\R-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "# fileRCL = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\R-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "# fileSCR = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\S-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "# fileSCL = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\S-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
     "\n",
     "#low new binning\n",
-    "fileRCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "fileRCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "fileSCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "fileSCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "fileRCR = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\R-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "fileRCL = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\R-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "fileSCR = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\S-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
+    "fileSCL = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\S-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
     "\n",
     "# #high neew binning\n",
-    "# fileRCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
-    "# fileSCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
-    "# fileRCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
-    "# fileSCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
+    "# fileRCR = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\R-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
+    "# fileSCR = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\S-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
+    "# fileRCL = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\R-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
+    "# fileSCL = uproot.open(r\"C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Experiments\\S-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0_higherbins.root\")\n",
     "\n",
     "k=fileRCR[loc].keys()\n",
     "d=dict(fileRCR[loc].classes()) # shows the type of each item\n",
@@ -191,6 +199,55 @@
     "                ctheta_cred.append(np.array((ctheta_c[0][1:] + ctheta_c[0][:-1])/2)) #! reduced of 1 dimension\n",
     "                run_cos=1.\n",
     "    return MFPAD, cosphi, MFPAD_xy, ctheta, ctheta_c, ctheta_cred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib as mpl\n",
+    "from matplotlib import cm\n",
+    "import matplotlib.colors\n",
+    "\n",
+    "#the following converts a cmap into plotly language \n",
+    "magma_cmap = mpl.cm.get_cmap('magma')\n",
+    "seismic_cmap = mpl.cm.get_cmap('seismic')\n",
+    "\n",
+    "magma_rgb = []\n",
+    "seismic_rgb = []\n",
+    "norm = mpl.colors.Normalize(vmin=0, vmax=255)\n",
+    "\n",
+    "for i in range(0, 255):\n",
+    "       k = mpl.colors.colorConverter.to_rgb(magma_cmap(norm(i)))\n",
+    "       magma_rgb.append(k)\n",
+    "\n",
+    "for i in range(0, 255):\n",
+    "       k = mpl.colors.colorConverter.to_rgb(seismic_cmap(norm(i)))\n",
+    "       seismic_rgb.append(k)\n",
+    "\n",
+    "def matplotlib_to_plotly(cmap, pl_entries):\n",
+    "    h = 1.0/(pl_entries-1)\n",
+    "    pl_colorscale = []\n",
+    "\n",
+    "    for k in range(pl_entries):\n",
+    "        C = list(map(np.uint8, np.array(cmap(k*h)[:3])*255))\n",
+    "        pl_colorscale.append([k*h, 'rgb'+str((C[0], C[1], C[2]))])\n",
+    "\n",
+    "    return pl_colorscale\n",
+    "\n",
+    "Magma_r = matplotlib_to_plotly(magma_cmap, 255)\n",
+    "Seismic_r = matplotlib_to_plotly(seismic_cmap, 255)\n",
+    "\n",
+    "#temperature cmap\n",
+    "colors = [[0, \"blue\"],\n",
+    "          [0.5, \"white\"],\n",
+    "          [0.75, \"yellow\"],\n",
+    "          [1, \"red\"]]\n",
+    "\n",
+    "cmap_temp = matplotlib.colors.LinearSegmentedColormap.from_list(\"temperature_philipp\", colors)\n",
+    "cmap_temp_go = go.color_continuous_scale=[(0, \"blue\"), (0.5, \"white\"), (0.75, \"yellow\"), (1,\"red\")]"
    ]
   },
   {
@@ -355,7 +412,7 @@
     "# for i,ax in zip(range(72),axes.T.flatten()) :\n",
     "for i,ax in zip(range(72),axes.T.flatten()) :\n",
     "    ax.contourf(phiM,cosM,MFPAD_RCR_cos[i].T)\n",
-    "    ax.text(0, 0, cosphi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=18)\n",
+    "    # ax.text(0, 0, cosphi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=18)\n",
     "    \n",
     "fig.tight_layout()\n",
     "plt.show()"
@@ -374,7 +431,7 @@
     "# WHATCH OUT! experimental data are saved in the form (cos(theta), phi) looping internally on cos(theta) -> subplots has to be filled column by column instead of row by row\n",
     "for i,ax in zip(range(72),axes.T.flatten()) :\n",
     "    ax.contourf(phiM,cosM,smoothgauss(MFPAD_RCR_cos[i],0.3,0.6).T)\n",
-    "    ax.text(0, 0, cosphi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=18)\n",
+    "    # ax.text(0, 0, cosphi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=18)\n",
     "    \n",
     "fig.tight_layout()\n",
     "plt.show()"
@@ -426,6 +483,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
+    "# fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
+    "fig.subplots_adjust(hspace = .5, wspace=.5)\n",
+    "\n",
+    "# WHATCH OUT! experimental data are saved in the form (cos(theta), phi) looping internally on cos(theta) -> subplots has to be filled column by column instead of row by row\n",
+    "# for i,ax in zip(range(72),axes.T.flatten()) :\n",
+    "for i,ax in zip(range(72),axes.T.flatten()) :\n",
+    "    ax.imshow(MFPAD_RCL_cos[i].T, extent=[phiM[0],phiM[-1],cosM[0],cosM[-1]], interpolation='quadric', cmap=\"viridis\", aspect=\"auto\")\n",
+    "    # ax.text(0, 0, cosphi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=18)\n",
+    "    \n",
+    "fig.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
     "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "fig.subplots_adjust(hspace = .5, wspace=.5)\n",
@@ -433,8 +510,8 @@
     "# WHATCH OUT! experimental data are saved in the form (cos(theta), phi) looping internally on cos(theta) -> subplots has to be filled column by column instead of row by row\n",
     "# for i,ax in zip(range(72),axes.T.flatten()) :\n",
     "for i,ax in zip(range(72),axes.T.flatten()) :\n",
-    "    ax.contourf(phiM,cosM,MFPAD_RCL_cos[i].T)\n",
-    "    ax.text(0, 0, cosphi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=18)\n",
+    "    ax.contourf(phiM,cosM,MFPAD_RCR_cos[i].T)\n",
+    "    # ax.text(0, 0, cosphi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=18)\n",
     "    \n",
     "fig.tight_layout()\n",
     "plt.show()"
@@ -474,7 +551,7 @@
     "# for i,ax in zip(range(72),axes.T.flatten()) :\n",
     "for i,ax in zip(range(72),axes.T.flatten()) :\n",
     "    ax.contourf(phiM,cosM,MFPAD_SCL_cos[i].T)\n",
-    "    ax.text(0, 0, cosphi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=18)\n",
+    "    # ax.text(0, 0, cosphi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=18)\n",
     "    \n",
     "fig.tight_layout()\n",
     "plt.show()"
@@ -498,9 +575,16 @@
     "\n",
     "for i in range(12):\n",
     "    for j in range(6):\n",
-    "        fig.add_trace(go.Contour(x=phiM,y=cosM,z=MFPAD_RCR_cos[j+i*6].T, line_smoothing=0.7, legendgroup=\"no\", colorscale=\"Viridis\", showscale=False, showlegend=False, contours=dict(start=0., end=endrange, size=endrange/10), row=j+1, col=i+1)\n",
+    "        fig.add_trace(go.Contour(x=phiM,y=cosM,z=MFPAD_RCR_cos[j+i*6].T, line_smoothing=0.7, legendgroup=\"no\", colorscale=\"Viridis\", showscale=False, showlegend=False, contours=dict(start=0., end=endrange, size=endrange/10)), row=j+1, col=i+1)\n",
+    "        # fig.add_trace(go.Contour(x=phiM,y=cosM,z=MFPAD_RCR_cos[j+i*6].T), row=j+1, col=i+1)\n",
     "    \n",
     "fig.update_layout(\n",
+    "    title=dict(\n",
+    "        text=\"MFPAD cos sorted\" ,\n",
+    "        # y=0.9,\n",
+    "        x=0.5,\n",
+    "        xanchor=\"center\",\n",
+    "        yanchor=\"top\"),\n",
     "    # coloraxis=dict(colorscale=Seismic_r),\n",
     "    # showlegend=False,\n",
     "    autosize=True,\n",
@@ -523,7 +607,12 @@
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
     "\n",
-    "endrange=np.amax(smoothgauss(MFPAD_RCR_cos,0.3,0.6))\n",
+    "endrange=[]\n",
+    "\n",
+    "for MFPAD in MFPAD_RCR_cos:\n",
+    "    endrange.append(np.amax(smoothgauss(MFPAD,0.3,0.6)))\n",
+    "endrange=np.amax(endrange)\n",
+    "\n",
     "\n",
     "fig = go.Figure()\n",
     "fig = make_subplots(rows=6, cols=12, vertical_spacing=0.015)\n",
@@ -533,6 +622,12 @@
     "        fig.add_trace(go.Contour(x=phiM,y=cosM,z=smoothgauss(MFPAD_RCR_cos[j+i*6],0.3,0.6).T, line_smoothing=0.7, legendgroup=\"no\", colorscale=\"Viridis\", showscale=False, showlegend=False, contours=dict(start=0., end=endrange, size=endrange/10)), row=j+1, col=i+1)\n",
     "    \n",
     "fig.update_layout(\n",
+    "    title=dict(\n",
+    "        text=\"MFPAD smoothed cos sorted\" ,\n",
+    "        # y=0.9,\n",
+    "        x=0.5,\n",
+    "        xanchor=\"center\",\n",
+    "        yanchor=\"top\"),\n",
     "    # coloraxis=dict(colorscale=Seismic_r),\n",
     "    # showlegend=False,\n",
     "    autosize=True,\n",
@@ -543,17 +638,89 @@
     "\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MFPAD_RCR_sum=np.sum(MFPAD_RCR, axis=0)\n",
+    "MFPAD_RCL_sum=np.sum(MFPAD_RCL, axis=0)\n",
+    "MFPAD_SCR_sum=np.sum(MFPAD_SCR, axis=0)\n",
+    "MFPAD_SCL_sum=np.sum(MFPAD_SCL, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax = plt.subplots(1,2, figsize=(5, 10))\n",
+    "ax[0].contourf(phiM,cosM,MFPAD_RCR_sum.T, cmap=\"viridis\")\n",
+    "ax[0].set_title(\"MFPAD R enant\")\n",
+    "ax[1].contourf(phiM,cosM,MFPAD_SCR_sum.T, cmap=\"viridis\")\n",
+    "ax[0].set_title(\"MFPAD S enant\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax = plt.subplots(1,2, figsize=(5, 10))\n",
+    "ax[0].imshow(MFPAD_RCR_sum.T, extent=[phiM[0],phiM[-1],cosM[0],cosM[-1]], interpolation='quadric', cmap=\"viridis\", aspect=\"auto\")\n",
+    "ax[0].set_title(\"MFPAD R enant\")\n",
+    "ax[1].imshow(MFPAD_SCR_sum.T, extent=[phiM[0],phiM[-1],cosM[0],cosM[-1]], interpolation='quadric', cmap=\"viridis\", aspect=\"auto\")\n",
+    "ax[1].set_title(\"MFPAD S enant\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = go.make_subplots(rows=1, cols=2,\n",
+    "                    subplot_titles=(\"MFPAD R enant\", \"MFPAD S enant\"))\n",
+    "\n",
+    "# fig.add_trace(go.Contour(z=param_matrix[0,:,0], x=go_phi, y=go_cos, line_smoothing=0, colorscale=Seismic_r, contours=dict(start=-0.2, end=0.2, size=0.04)), 1, 1)\n",
+    "fig.add_trace(go.Contour(x=phiM,y=cosM,z=MFPAD_RCR_sum.T, line_smoothing=0.75, colorscale=\"Viridis\"), 1, 1)\n",
+    "fig.add_trace(go.Contour(x=phiM,y=cosM,z=MFPAD_SCR_sum.T, line_smoothing=0.75, colorscale=\"Viridis\"), 1, 2)\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    # coloraxis=dict(colorscale=Seismic_r),\n",
+    "    # showlegend=False,\n",
+    "    autosize=False,\n",
+    "    width=900,\n",
+    "    height=450,\n",
+    "    margin=dict(l=5,r=5,b=25,t=25)\n",
+    "    )\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.6 64-bit ('base': conda)",
+   "display_name": "Python 3.8.6 64-bit (conda)",
    "metadata": {
     "interpreter": {
      "hash": "14199186261275788dfea1c403a51d6f79ce13d90df2e64b59dbb79af406f697"
     }
    },
-   "name": "Python 3.8.6 64-bit ('base': conda)"
+   "name": "Python 3.8.6 64-bit (conda)"
   },
   "language_info": {
    "codemirror_mode": {
