--- a/72_2D_MFPADs_theory.ipynb
+++ b/72_2D_MFPADs_theory.ipynb
@@ -10,6 +10,7 @@
     "import math\n",
     "import uproot\n",
     "import numpy as np\n",
+    "from numpy.lib.function_base import meshgrid\n",
     "import pandas as pd\n",
     "import pkgutil\n",
     "import uproot_methods\n",
@@ -23,15 +24,17 @@
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from mpl_toolkits.mplot3d.art3d import Poly3DCollection\n",
     "\n",
-    "import max_functions as mf\n",
+    "import plotly.graph_objects as go\n",
+    "from plotly.subplots import make_subplots\n",
+    "import itertools\n",
     "\n",
     "plt.style.use(hep.style.ROOT) # For now ROOT defaults to CMS\n",
     "\n",
-    "path1 = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=3.0eV' # use your path\n",
-    "path2 = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=4.0eV' # use your path\n",
-    "path3 = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=6.1eV' # use your path\n",
-    "path4 = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=8.2eV' # use your path\n",
-    "path = r'D:\\UniFRK\\SEXTANT_sept2018\\S-TFMoX\\enant=S_hel=+1_KE=11.5eV' # use your path\n",
+    "path1 = r'C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Theory\\TFMoX-S\\enant=S_hel=+1_KE=3.0eV' # use your path\n",
+    "path2 = r'C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Theory\\TFMoX-S\\enant=S_hel=+1_KE=4.0eV' # use your path\n",
+    "path3 = r'C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Theory\\TFMoX-S\\enant=S_hel=+1_KE=6.1eV' # use your path\n",
+    "path4 = r'C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Theory\\TFMoX-S\\enant=S_hel=+1_KE=8.2eV' # use your path\n",
+    "path = r'C:\\Users\\Giammarco\\Desktop\\PYTHON_graphs\\DATA\\Theory\\TFMoX-S\\enant=S_hel=+1_KE=11.5eV' # use your path\n",
     "\n",
     "all_files = glob.glob(path + \"/*.dat\")\n",
     "\n",
@@ -52,15 +55,8 @@
     "\n",
     "cosphi_th=np.array(cosphi_th)\n",
     "frame = pd.concat(li, axis=0)\n",
-    "frame_srt=frame.groupby(\"filename\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "frame_srt=frame.groupby(\"filename\")\n",
+    "\n",
     "frame.loc[frame[\"filename\"] == \"1_1\"] # first way of selecting the right file\n",
     "frame_set = frame.set_index(\"filename\") # build a multiindex using the categories of filename"
    ]
@@ -83,6 +79,7 @@
    },
    "outputs": [],
    "source": [
+    "# S ENANTIOMER\n",
     "# converting to numpy arrays to plot\n",
     "phi = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,0].unique() # phi\n",
     "ctheta = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,1].unique() # cos(theta)\n",
@@ -90,9 +87,9 @@
     "\n",
     "print(phi.shape, ctheta.shape, counts.shape)\n",
     "print(type(phi), type(ctheta), type(counts))\n",
-    "counts_matrix = counts.reshape(200,100) # reshape(rows=x,columns=y)\n",
+    "counts_1_1 = counts.reshape(200,100) # reshape(rows=x,columns=y)\n",
     "\n",
-    "print(\"number of ROWS (x) = \", len(counts_matrix[:,1]), \"number of COLUMNS (y for reshaping) = \", len(counts_matrix[1,:]))"
+    "print(\"number of ROWS (x) = \", len(counts_1_1[:,1]), \"number of COLUMNS (y for reshaping) = \", len(counts_1_1[1,:]))"
    ]
   },
   {
@@ -162,6 +159,7 @@
    "source": [
     "import matplotlib as mpl\n",
     "from matplotlib import cm\n",
+    "import matplotlib.colors\n",
     "\n",
     "#the following converts a cmap into plotly language \n",
     "magma_cmap = mpl.cm.get_cmap('magma')\n",
@@ -190,7 +188,16 @@
     "    return pl_colorscale\n",
     "\n",
     "Magma_r = matplotlib_to_plotly(magma_cmap, 255)\n",
-    "Seismic_r = matplotlib_to_plotly(seismic_cmap, 255)"
+    "Seismic_r = matplotlib_to_plotly(seismic_cmap, 255)\n",
+    "\n",
+    "#temperature cmap\n",
+    "colors = [[0, \"blue\"],\n",
+    "          [0.5, \"white\"],\n",
+    "          [0.75, \"yellow\"],\n",
+    "          [1, \"red\"]]\n",
+    "\n",
+    "cmap_temp = matplotlib.colors.LinearSegmentedColormap.from_list(\"temperature_philipp\", colors)\n",
+    "cmap_temp_go = go.color_continuous_scale=[(0, \"blue\"), (0.5, \"white\"), (0.75, \"yellow\"), (1,\"red\")]"
    ]
   },
   {
@@ -200,10 +207,11 @@
    "outputs": [],
    "source": [
     "# plt.imshow(z_matrix)\n",
-    "plt.imshow(counts_matrix.T,extent=[phi[0],phi[-1],ctheta[0],ctheta[-1]], aspect=180)\n",
+    "plt.imshow(counts_1_1.T,extent=[phi[0],phi[-1],ctheta[0],ctheta[-1]], aspect=180)\n",
     "ax = plt.axes()\n",
     "ax.set_xlabel('phi [DEG]')\n",
     "ax.set_ylabel('cos(theta) [adm]')\n",
+    "ax.set_title(\"MFPAD S enanant 1_1\")\n",
     "plt.colorbar()"
    ]
   },
@@ -220,9 +228,10 @@
     "\n",
     "fig1, ax = plt.subplots(constrained_layout=True)\n",
     "\n",
-    "CS = ax.contourf(phi,ctheta,counts_matrix.T, levels=20, extent=[phi[0],phi[-1],ctheta[0],ctheta[-1]], vmin=0.0001)\n",
+    "CS = ax.contourf(phi,ctheta,counts_1_1.T, levels=20, extent=[phi[0],phi[-1],ctheta[0],ctheta[-1]], vmin=0.0001)\n",
     "ax.set_xlabel('phi [DEG]')\n",
     "ax.set_ylabel('cos(theta) [adm]')\n",
+    "ax.set_title(\"MFPAD S enanant 1_1\")\n",
     "fig1.colorbar(CS)"
    ]
   },
@@ -277,7 +286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# all the 72 plots\n",
+    "# all the 72 plots S ENANTIOMER\n",
     "# the theoretical MFPAD has the form 1_1 ... 1_12, 2_1 ... 2_12 therefore it is ok the (6,12) subplot\n",
     "# 6 levels of cos(theta) (y), 12 levels of phi (x)\n",
     "\n",
@@ -285,16 +294,16 @@
     "phi_full = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,0].to_numpy() # phi\n",
     "ctheta_full = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,1].to_numpy() # cos(theta)\n",
     "\n",
-    "fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
+    "fig2, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
     "# fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
-    "fig.subplots_adjust(hspace = .5, wspace=.5)\n",
+    "fig2.subplots_adjust(hspace = .5, wspace=.5)\n",
     "\n",
     "for filename,group,i,ax in zip(frame_srt,frame_srt,range(72),axes.flatten()) :\n",
     "    counts_str = group[1][\"value\"].to_numpy()\n",
     "    ax.contourf(phi_full.reshape(200,100),ctheta_full.reshape(200,100),counts_str.reshape(200,100), levels=20, vmin=0.0001)\n",
-    "    ax.text(0, 0, cosphi_th[i], ha=\"center\", va=\"center\", color=\"red\",fontsize=18)\n",
+    "    ax.text(0, 0, \"S en\"+cosphi_th[i], ha=\"center\", va=\"center\", color=\"red\",fontsize=18)\n",
     "    \n",
-    "fig.tight_layout()\n",
+    "fig2.tight_layout()\n",
     "plt.show()\n",
     "\n",
     "\n",
@@ -509,7 +518,7 @@
     "custom_xlim = (-1, 1)\n",
     "custom_ylim = (-0.2,0.2)\n",
     "\n",
-    "for i in range(72): #72 fixed because of the photon directions, equal to range(len(cosphi))\n",
+    "for i,ax in zip(range(72),axes.flatten()): #72 fixed because of the photon directions, equal to range(len(cosphi))\n",
     "    x_data = np.flip(ctheta)\n",
     "    y_data = cPECD_cos[i]\n",
     "    y_err = errPECD[i]\n",
@@ -524,7 +533,6 @@
     "    #NOTE: x_data has to be monotonicalli INCREASING!\n",
     "    bspl = make_interp_spline(x_data, PECD6(x_data, *m.values.values()), k=5)\n",
     "    \n",
-    "    ax = fig.add_subplot(6, 12, i+1)\n",
     "    ax.plot(x_data_new,bspl(x_data_new))\n",
     "    ax.scatter(x_data,y_data,color='r')\n",
     "    ax.set_xlim(custom_xlim)\n",
@@ -555,11 +563,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from numpy.lib.function_base import meshgrid\n",
-    "import plotly.graph_objects as go\n",
-    "from plotly.subplots import make_subplots\n",
-    "import itertools\n",
-    "\n",
     "param_matrix_cos=np.array(param_matrix_cos) #numpy tranformation!!!\n",
     "phicos_MFPAD = np.array(list(itertools.product(np.linspace(-180,180,12).tolist(), np.linspace(-1,1,6).tolist())))\n",
     "\n",
@@ -577,8 +580,8 @@
     "                    subplot_titles=('Without Smoothing', 'With Smoothing'))\n",
     "\n",
     "# fig.add_trace(go.Contour(z=param_matrix[0,:,0], x=go_phi, y=go_cos, line_smoothing=0, colorscale=Seismic_r, contours=dict(start=-0.2, end=0.2, size=0.04)), 1, 1)\n",
-    "fig.add_trace(go.Contour(z=param_matrix_cos[0,:,0], x=go_phi, y=go_cos, line_smoothing=0, colorscale=Seismic_r), 1, 1)\n",
-    "fig.add_trace(go.Contour(z=param_matrix_cos[0,:,0], x=go_phi, y=go_cos, line_smoothing=0.75, colorscale=Seismic_r), 1, 2)\n",
+    "fig.add_trace(go.Contour(z=param_matrix_cos[0,:,0], x=go_phi, y=go_cos, line_smoothing=0, colorscale=cmap_temp_go), 1, 1)\n",
+    "fig.add_trace(go.Contour(z=param_matrix_cos[0,:,0], x=go_phi, y=go_cos, line_smoothing=0.75, colorscale=cmap_temp_go), 1, 2)\n",
     "\n",
     "fig.update_layout(\n",
     "    # coloraxis=dict(colorscale=Seismic_r),\n",
@@ -587,6 +590,39 @@
     "    width=900,\n",
     "    height=450,\n",
     "    margin=dict(l=5,r=5,b=25,t=25)\n",
+    "    )\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#to be compared with the b1 maps of the experimental data AS THEY ARE (not sorted)\n",
+    "\n",
+    "fig = go.Figure()\n",
+    "\n",
+    "fig = make_subplots(rows=6, cols=2, vertical_spacing=0.015,\n",
+    "                    subplot_titles=('Without Smoothing', 'With Smoothing'))\n",
+    "\n",
+    "for i in range(len(param_matrix_phi)):\n",
+    "    if i==1 or i==5:\n",
+    "        fig.add_trace(go.Contour(z=param_matrix_cos[i,:,0], x=go_phi, y=go_cos, line_smoothing=0, colorscale=cmap_temp_go, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.5)), i+1, 1)\n",
+    "        fig.add_trace(go.Contour(z=param_matrix_cos[i,:,0], x=go_phi, y=go_cos, line_smoothing=0.85, colorscale=cmap_temp_go, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.5)), i+1, 2)\n",
+    "    else:\n",
+    "        fig.add_trace(go.Contour(z=param_matrix_cos[i,:,0], x=go_phi, y=go_cos, line_smoothing=0, colorscale=cmap_temp_go, legendgroup=\"yes\", contours=dict(start=-0.5, end=0.5, size=0.1)), i+1, 1)\n",
+    "        fig.add_trace(go.Contour(z=param_matrix_cos[i,:,0], x=go_phi, y=go_cos, line_smoothing=0.85, colorscale=cmap_temp_go, legendgroup=\"yes\", contours=dict(start=-0.5, end=0.5, size=0.1)), i+1, 2)\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    # coloraxis=dict(colorscale=Seismic_r),\n",
+    "    # showlegend=False,\n",
+    "    autosize=False,\n",
+    "    # width=800,\n",
+    "    height=1500,\n",
+    "    margin=dict(l=0,r=0,b=25,t=25)\n",
     "    )\n",
     "\n",
     "fig.show()"
@@ -693,6 +729,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# all the 72 plots FOR R ENANTIOMER NOT SORTED: to be compare directly with experimental data\n",
+    "fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
+    "# fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
+    "fig.subplots_adjust(hspace = .5, wspace=.5)\n",
+    "\n",
+    "for filename,group,i,ax in zip(frame_srt,frame_srt,range(72),axes.flatten()) :\n",
+    "    counts_str = group[1][\"value\"].to_numpy()\n",
+    "    ax.contourf(phi_full.reshape(200,100),ctheta_full.reshape(200,100),counts_matrixR_cos[i].reshape(200,100), levels=20, vmin=0.0001)\n",
+    "    \n",
+    "fig.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "cPECD_phi =  np.divide(np.subtract(cos_projthR_phi,cos_projthS_phi),np.add(cos_projthR_phi,cos_projthS_phi))\n",
     "errPECD_phi = np.sqrt(1/(cos_projthR_phi+cos_projthS_phi))"
    ]
@@ -712,7 +767,7 @@
     "custom_xlim = (-1, 1)\n",
     "custom_ylim = (-0.2,0.2)\n",
     "\n",
-    "for i in range(72): #fixe because of the photon directions, equal to range(len(cosphi))\n",
+    "for i,ax in zip(range(72),axes.flatten()): #fixe because of the photon directions, equal to range(len(cosphi))\n",
     "    #print(i)\n",
     "    x_data = np.flip(ctheta)\n",
     "    y_data = cPECD_phi[i]\n",
@@ -727,7 +782,6 @@
     "    x_data_new = np.linspace(x_data.min(), x_data.max(), 300)\n",
     "    bspl = make_interp_spline(x_data, PECD6(x_data, *m.values.values()), k=5)\n",
     "    \n",
-    "    ax = fig.add_subplot(6, 12, i+1)\n",
     "    ax.plot(x_data_new, bspl(x_data_new))\n",
     "    ax.scatter(x_data,y_data,color='r')\n",
     "    ax.set_xlim(custom_xlim)\n",
@@ -757,11 +811,11 @@
     "\n",
     "for i in range(len(param_matrix_phi)):\n",
     "    if i==1 or i==5:\n",
-    "        fig.add_trace(go.Contour(z=param_matrix_phi[i,:,0], x=go_phi, y=go_cos, line_smoothing=0, colorscale=Seismic_r, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.5)), i+1, 1)\n",
-    "        fig.add_trace(go.Contour(z=param_matrix_phi[i,:,0], x=go_phi, y=go_cos, line_smoothing=0.85, colorscale=Seismic_r, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.5)), i+1, 2)\n",
+    "        fig.add_trace(go.Contour(z=param_matrix_phi[i,:,0], x=go_phi, y=go_cos, line_smoothing=0, colorscale=cmap_temp_go, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.5)), i+1, 1)\n",
+    "        fig.add_trace(go.Contour(z=param_matrix_phi[i,:,0], x=go_phi, y=go_cos, line_smoothing=0.85, colorscale=cmap_temp_go, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.5)), i+1, 2)\n",
     "    else:\n",
-    "        fig.add_trace(go.Contour(z=param_matrix_phi[i,:,0], x=go_phi, y=go_cos, line_smoothing=0, colorscale=Seismic_r, legendgroup=\"yes\", contours=dict(start=-0.2, end=0.2, size=0.04)), i+1, 1)\n",
-    "        fig.add_trace(go.Contour(z=param_matrix_phi[i,:,0], x=go_phi, y=go_cos, line_smoothing=0.85, colorscale=Seismic_r, legendgroup=\"yes\", contours=dict(start=-0.2, end=0.2, size=0.04)), i+1, 2)\n",
+    "        fig.add_trace(go.Contour(z=param_matrix_phi[i,:,0], x=go_phi, y=go_cos, line_smoothing=0, colorscale=cmap_temp_go, legendgroup=\"yes\", contours=dict(start=-0.5, end=0.5, size=0.1)), i+1, 1)\n",
+    "        fig.add_trace(go.Contour(z=param_matrix_phi[i,:,0], x=go_phi, y=go_cos, line_smoothing=0.85, colorscale=cmap_temp_go, legendgroup=\"yes\", contours=dict(start=-0.5, end=0.5, size=0.1)), i+1, 2)\n",
     "\n",
     "fig.update_layout(\n",
     "    # coloraxis=dict(colorscale=Seismic_r),\n",
@@ -784,10 +838,10 @@
     "#INTEGRATED S AND R MFPADs\n",
     "fig, (ax0, ax1) = plt.subplots(1,2,sharex=True,figsize=(12, 6))\n",
     "\n",
-    "ax0.imshow(MFPAD_R_cos_norm_sum, extent=[go_phi[0],go_phi[-1],go_cos[0],go_cos[-1]], interpolation='quadric', cmap='seismic', aspect=\"auto\")\n",
+    "ax0.imshow(MFPAD_R_cos_norm_sum, extent=[go_phi[0],go_phi[-1],go_cos[0],go_cos[-1]], interpolation='quadric', cmap='viridis', aspect=\"auto\")\n",
     "ax0.set_title(\"MFPAD R enant\")\n",
     "\n",
-    "ax1.imshow(MFPAD_S_cos_norm_sum, extent=[go_phi[0],go_phi[-1],go_cos[0],go_cos[-1]], interpolation='quadric', cmap='seismic', aspect=\"auto\")\n",
+    "ax1.imshow(MFPAD_S_cos_norm_sum, extent=[go_phi[0],go_phi[-1],go_cos[0],go_cos[-1]], interpolation='quadric', cmap='viridis', aspect=\"auto\")\n",
     "ax1.set_title(\"MFPAD S enant\")\n",
     "\n",
     "plt.show()"
@@ -804,17 +858,17 @@
     "# interpolation: [ 'none', 'nearest', 'bilinear', 'bicubic', 'spline16', 'spline36', 'hanning', 'hamming', 'hermite', 'kaiser', 'quadric', 'catrom', 'gaussian', 'bessel', 'mitchell', 'sinc', 'lanczos'.]\n",
     "\n",
     "fig=plt.figure()\n",
-    "plt.imshow(mPECD_cos_sum, vmin=-0.3, vmax=0.3, extent=[go_phi[0],go_phi[-1],go_cos[0],go_cos[-1]], interpolation='none', cmap='seismic', aspect=\"auto\")\n",
+    "plt.imshow(mPECD_cos_sum, vmin=-0.3, vmax=0.3, extent=[go_phi[0],go_phi[-1],go_cos[0],go_cos[-1]], interpolation='none', cmap=cmap_temp, aspect=\"auto\")\n",
     "plt.title(\"Contrast map theory\")\n",
     "plt.colorbar()\n",
     "\n",
     "fig1=plt.figure()\n",
-    "plt.imshow(mPECD_cos_sum, vmin=-0.3, vmax=0.3, extent=[go_phi[0],go_phi[-1],go_cos[0],go_cos[-1]], interpolation='bilinear', cmap='seismic', aspect=\"auto\")\n",
+    "plt.imshow(mPECD_cos_sum, vmin=-0.3, vmax=0.3, extent=[go_phi[0],go_phi[-1],go_cos[0],go_cos[-1]], interpolation='bilinear', cmap=cmap_temp, aspect=\"auto\")\n",
     "plt.title(\"Contrast map theory bilinear\")\n",
     "plt.colorbar()\n",
     "\n",
     "fig2=plt.figure()\n",
-    "plt.imshow(mPECD_cos_sum, vmin=-0.3, vmax=0.3, extent=[go_phi[0],go_phi[-1],go_cos[0],go_cos[-1]], interpolation='quadric', cmap='seismic', aspect=\"auto\")\n",
+    "plt.imshow(mPECD_cos_sum, vmin=-0.3, vmax=0.3, extent=[go_phi[0],go_phi[-1],go_cos[0],go_cos[-1]], interpolation='quadric', cmap=cmap_temp, aspect=\"auto\")\n",
     "plt.title(\"Contrast map theory quadratic interpolation\")\n",
     "plt.colorbar()"
    ]
@@ -829,13 +883,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.6 64-bit ('anaconda3': conda)",
+   "display_name": "Python 3.8.6 64-bit (conda)",
    "metadata": {
     "interpreter": {
      "hash": "14199186261275788dfea1c403a51d6f79ce13d90df2e64b59dbb79af406f697"
     }
    },
-   "name": "Python 3.8.6 64-bit ('anaconda3': conda)"
+   "name": "Python 3.8.6 64-bit (conda)"
   },
   "language_info": {
    "codemirror_mode": {
