--- a/test_imshow.ipynb
+++ b/test_imshow.ipynb
@@ -1,12 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "extent[] make the same as having x and y\n",
+    "extent[] make the same as having x and y\r\n",
     "Both imshoe and contourf fill the graph from the minimum x and y, increasing first a and then ywhen extent is called, the "
    ]
   },
@@ -82,13 +80,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('base': conda)",
+   "display_name": "Python 3.8.6 64-bit (conda)",
    "metadata": {
     "interpreter": {
      "hash": "14199186261275788dfea1c403a51d6f79ce13d90df2e64b59dbb79af406f697"
     }
    },
-   "name": "Python 3.8.5 64-bit ('base': conda)"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -100,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.6-final"
   }
  },
  "nbformat": 4,
