fugi fnctions and adjustments in metadata

--- a/3D_MFPADs_theory_plotly.ipynb
+++ b/3D_MFPADs_theory_plotly.ipynb
@@ -14,6 +14,8 @@
     "import pkgutil\n",
     "import uproot_methods\n",
     "\n",
+    "import function_giammi as fugi\n",
+    "\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.colors import LightSource\n",
@@ -56,6 +58,7 @@
     "\n",
     "cosphi_th = np.array(cosphi_th)\n",
     "frame = pd.concat(li, axis=0)\n",
+    "#this commmand avoids 1_1 followed by 1_10\n",
     "frame_srt = frame.groupby(\"filename\",sort=False)\n",
     "\n",
     "for key, item in frame_srt:\n",
@@ -67,19 +70,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def remap(b,lim1_low,lim1_high,lim2_low,lim2_high):\n",
-    "    \"\"\"\n",
-    "    Remaps the np array b to the new interval [lim_low,lim_high]\n",
-    "    \"\"\"\n",
-    "    col1=np.array([col[0] for col in b])\n",
-    "    col2=np.array([col[1] for col in b])\n",
-    "    col1 = lim1_low + np.divide(lim1_high-lim1_low , np.amax(col1)-np.amin(col1)) * (col1-np.amin(col1))\n",
-    "    col2 = lim2_low + np.divide(lim2_high-lim2_low , np.amax(col2)-np.amin(col2)) * (col2-np.amin(col2))\n",
-    "    b=zip(col1,col2)\n",
-    "    # b=np.around(b,3)\n",
-    "    return b"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -88,13 +79,14 @@
    "outputs": [],
    "source": [
     "#look to the values in b1 map and found the MFPAD\n",
-    "cosphi_adj=list(remap(cosphi_th,-0.835,0.835,-165,165))\n",
+    "#accordinf to automatic_72_CPR.f90 from philipp [1,6] is from [cos(0), cos(pi)] = [1,-1]\n",
+    "cosphi_adj=list(remap(cosphi_th,0.835,-0.835,-165,165))\n",
+    "# cosphi_adj=list(remap(cosphi_th,-1.,1.,-180,180))\n",
     "cosphi_adj=np.around(cosphi_adj,3)\n",
     "\n",
     "dfind=pd.DataFrame(cosphi_adj, columns=[\"ctheta\",\"phi\"])\n",
     "dfind[\"item\"]=allnames\n",
-    "dfind.loc[dfind[\"phi\"] == -15]\n",
-    "\n"
+    "dfind.loc[dfind[\"phi\"] == -105.]"
    ]
   },
   {
@@ -104,7 +96,7 @@
    "outputs": [],
    "source": [
     "#selecting the rght file according to the needs [\"filename\"] == \"x_x\"]\n",
-    "nitem=\"2_6\"\n",
+    "nitem=\"1_3\"\n",
     "frame.loc[frame[\"filename\"] == nitem]  # first way of selecting the right file\n",
     "frame_set = frame.set_index(\"filename\")  # build a mul\n",
     "\n",
@@ -115,35 +107,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "#first attempt to fix the stripe: NOT WORKING\n",
-    "#Forcing the values at the edges of +-phi to be the same avg\n",
-    "test11=frame.loc[frame[\"filename\"] == \"1_1\"]\n",
-    "a1=test11.loc[test11[\"phi\"] == np.min(phi)][\"value\"].to_numpy()\n",
-    "b1=test11.loc[test11[\"phi\"] == np.max(phi)][\"value\"].to_numpy()\n",
-    "avgphi=np.divide(a1+b1,2)\n",
-    "avgphi=np.pad(avgphi, (0,len(phi)-len(avgphi)), 'constant', constant_values=0)\n",
-    "# avgphipd = pd.Series(avgphi)\n",
-    "test11[\"value\"].mask(test11[\"phi\"] == np.min(phi), avgphi, inplace=True)\n",
-    "test11[\"value\"].mask(test11[\"phi\"] == np.max(phi), avgphi, inplace=True)\n",
-    "\n",
-    "#Forcing the values at the edges of +-ctheta to be the same avg\n",
-    "a2=test11.loc[test11[\"cos(theta)\"] == np.min(ctheta)][\"value\"].to_numpy()\n",
-    "b2=test11.loc[test11[\"cos(theta)\"] == np.max(ctheta)][\"value\"].to_numpy()\n",
-    "avgcos=np.divide(a2+b2,2)\n",
-    "avgcos=np.pad(avgcos, (0,len(ctheta)-len(avgcos)), 'constant', constant_values=0)\n",
-    "# avgcospd = pd.Series(avgcos)\n",
-    "# test11[\"value\"].mask(test11[\"cos(theta)\"] == np.min(ctheta), avgcos, inplace=True)\n",
-    "# test11[\"value\"].mask(test11[\"cos(theta)\"] == np.max(ctheta), avgcos, inplace=True)\n",
-    "\n",
-    "counts_fixed = test11.iloc[:,2].to_numpy()\n",
-    "phi_fixed = np.where(phi==np.min(phi), -180., phi) #the last is an else\n",
-    "phi_fixed = np.where(phi==np.max(phi), 180., phi_fixed)\n",
-    "ctheta_fixed = np.where(ctheta==np.min(ctheta), -1., ctheta)\n",
-    "ctheta_fixed = np.where(ctheta==np.max(ctheta), 1., ctheta_fixed)\n",
-    "# print(np.unique(phi_fixed))"
+    "fig,ax=plt.subplots()\n",
+    "titel_fig=\"MFPAD el \"+str(nitem)\n",
+    "ax.contourf(np.unique(phi),np.unique(ctheta),counts.reshape(200,100).T, cmap=\"viridis\")\n",
+    "# plt.imshow(mPECD_cos_sum, vmin=-0.3, vmax=0.3, extent=[phiM[0],phiM[-1],cosM[0],cosM[-1]], interpolation='none', cmap=cmap_temp, aspect=\"auto\")\n",
+    "ax.set_title(titel_fig)\n",
+    "ax.set_xlabel('phi [DEG]')\n",
+    "ax.set_ylabel('cos(theta) [adm]')\n",
+    "fig.show()\n",
+    "fig.savefig('OUTPUTS/MFPAD_th_el_1_3.png')"
    ]
   },
   {
@@ -152,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#convertion to cartesian coordinate\n",
+    "#convertion to cartesian coordinate in MF\n",
     "theta_rad = np.arccos(ctheta)\n",
     "# theta_rad = np.arccos(ctheta_fixed)\n",
     "phi_rad = phi * np.pi/180.\n",
