--- a/3D_MFPADs_experiment.ipynb
+++ b/3D_MFPADs_experiment.ipynb
@@ -14,6 +14,8 @@
     "import pkgutil\n",
     "import uproot_methods\n",
     "\n",
+    "import function_giammi as fugi\n",
+    "\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.colors import LightSource\n",
@@ -323,13 +325,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('base': conda)",
+   "display_name": "Python 3.8.6 64-bit (conda)",
    "metadata": {
     "interpreter": {
      "hash": "14199186261275788dfea1c403a51d6f79ce13d90df2e64b59dbb79af406f697"
     }
    },
-   "name": "Python 3.8.5 64-bit ('base': conda)"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -341,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.6-final"
   }
  },
  "nbformat": 4,
